Fix bug in preview pane for text overflow

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ h1,h2,h3,h4,h5,h6,.wrapper,#editor{
   width: 100%;
   padding: 5px;
   margin-bottom: 20px;
+  overflow: auto;
 }
 
 .wrapper {
